--- a/templates/dirMortgage.tpl.html
+++ b/templates/dirMortgage.tpl.html
@@ -2,10 +2,10 @@
   <div class="panel-heading">
     <h4>Mortgage Loan Calculator</h4>
   </div>
-  <div class="panel-body">
+  <div class="panel-body" style="background:rgba(0,0,0,0.5)">
     <div role="form" class="col-md-9">
       <div class="input-group form-group">
-        <label for="downPayment" id="label-addon1" class="input-group-addon control-label">Down Payment:</label>
+        <label for="downPayment" id="label-addon1" class="input-group-addon control-label">Down Payment&nbsp;({{defaults.currency}})</label>
         <input type="number" name="downPayment" class="form-control" aria-describedby="label-addon1" data-ng-model="loan.downPayment"/>
       </div>
       <div class="input-group form-group">
@@ -17,11 +17,11 @@
         <input type="number" name="years" class="form-control" aria-describedby="label-addon3" step="{{defaults.stepRate}}" min="{{defaults.minYear}}" max="{{defaults.maxYear}}" data-ng-model="loan.years"/>
       </div>
       <div class="input-group form-group">
-        <label for="months" class="input-group-addon" id="label-addon4">Term in months</label>
+        <label for="months" class="input-group-addon" id="label-addon4">Terms in months</label>
         <input type="number" name="months" class="form-control" data-ng-model="loan.months" aria-describedby="label-addon4"/>
       </div>
       <div class="input-group form-group">
-        <label for="rate" class="input-group-addon" id="label-addon5">Rate per year (%)</label>
+      <label for="rate" class="input-group-addon" id="label-addon5">Interest rate/year (%)</label>
         <input type="number" class="form-control" min="{{defaults.minRate}}" aria-describedby="label-addon5" max="{{defaults.maxRate}}" step="{{defaults.stepRate}}" data-ng-model="loan.rate"/>
       </div>
       <div class="input-group form-group">
